--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Biblioteca de Jogos</title>
 </head>
 <body>
-    <h1>Sistema de Cadastro de Jogos</h1>
+    <h1>Sistema de Cadastro de Jogos <v1 class="0 0"></v1></h1>
     <script src="app.js"></script>
-    <h1>Executado com sucesso!</h1>
+    <h1>Listagem dos jogos realizada.</h1>
 </body>
 </html>
